wishlist/manifest/wishlist-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wishlist-app
  template:
    metadata:
      labels:
        app: wishlist-app
    spec:
      containers:
        - name: wishlist-app
          image: dashbah/wishlist:2.0.2
          volumeMounts:
            - mountPath: /app/build/libs
              name: app-volume
      volumes:
        - name: app-volume
          emptyDir: {}
