wishlist/manifest/wishlist-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wishlist-db
  template:
    metadata:
      labels:
        app: wishlist-db
    spec:
      containers:
        - name: wishlist-db
          image: postgres:14.8-alpine3.18
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-pvc
      volumes:
        - name: db-pvc
          persistentVolumeClaim:
            claimName: db-pvc-claim #запрос на выделение постоянного хранилища
