wishlist/manifest/wishlist-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-app-service
spec:
  selector:
    app: wishlist-app
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 8181
