wishlist/manifest/wishlist-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-db-service
spec:
  selector:
    app: wishlist-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
