wishlist/manifest/wishlist-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wishlist-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wishlist-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wishlist-app-service
                port:
                  number: 8080
